fix: cursor z-index

--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -44,8 +44,8 @@
   @media screen and (min-width: 1200px)
     --spacing-sides: 2rem
   // Z-Indexes
-  --z-index-corner-smiley: 900
-  --z-index-cursor: 800
+  --z-index-corner-smiley: 800
+  --z-index-cursor: 900
   --z-index-bye-blok: 700
   --z-index-blok-about: 1
   // Transitions
